sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: not found: value lgr
  lgr = getNombreValeurs()
  ^AlgInsertionSort:6: error: not found: value lgr
  for (i <- 1 to lgr -1){
                 ^